Only offer install commands that are actually install commands
The extractor fell back to the first line of the first code block when
no package manager matched, which offered "from firecrawl import
Firecrawl" and "cd dify" as installation steps. A command must now
match a known installer or the field stays empty, and the skill is
already told to read the detail file when it is. 184 wrong commands
cleared, 45 corrected: n8n now gets its curl installer instead of a
docker invocation, dify gets "docker compose up -d" instead of "cd
dify". Coverage of established tools falls from 68% to 49%, which is
the honest number rather than the flattering one.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>